Added countdown messages to game

--- a/data/countdown.yml
+++ b/data/countdown.yml
@@ -13,5 +13,5 @@
 - Somewhere in the house, a door just closed. That draft again, probably.
 - A screech, from above. You wonder if it might be bats in the attic.
 - You hear your name, whispered as if by a person standing directly behind you. But when you turn around, no one's there.
-- "I'm imagining things", you tell yourself. "No", the answer comes.
+- \"I'm imagining things\", you tell yourself. \"No\", the answer comes.
 - Suddenly, you have a strong sense of impending doom. You stare straight ahead, for fear of what you might see if you turn around.
