Refactor to use ES6 syntax

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node --experimental-modules index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,10 @@
     "chalk": "^2.4.2",
     "js-yaml": "^3.13.1",
     "vorpal": "^1.12.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
