--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --experimental-modules index.js"
+    "start": "node --experimental-modules terminal.js",
+    "web": "http-server ."
   },
   "author": "",
   "license": "ISC",
