Updated room descriptions

--- a/data/locations/dark_hallway.yml
+++ b/data/locations/dark_hallway.yml
@@ -1,4 +1,4 @@
-title: When your eyes adjust to the dim light
+title: When your eyes adjust to the dim light...
 description: You see something moving in the far corner. It looks like it is coming toward you.
 name: dark hallway
 monsters:
