--- a/data/locations/dog_house.yml
+++ b/data/locations/dog_house.yml
@@ -1,6 +1,6 @@
 title: Not sure how you managed to squeeze in here.
-description: Barely enough room for a standard size dog, let alone a person.
-The homeowner seems to be gone for now, but you can bet they will be back anytime
+description: The doghouse barely offers enough room for a dog, let alone a person.
+The homeowner seems to be gone for now, but you can be sure they will be back anytime
 now.
 name: dog house
 monsters:
