--- a/data/locations/kitchen.yml
+++ b/data/locations/kitchen.yml
@@ -1,6 +1,6 @@
 title: The floor littered with unused mush, unrecognizable scraps, spoiled ingredients.
-description: Above you dirty pots and pans dangle. In the corner, a giant kettle twice
-your size slowly bubbles as it a strange green foam overflows. 
+description: Above you dirty pots and pans dangle from hooks. In the corner, 
+a giant kettle twice your size slowly bubbles as a strange green foam overflows from it. 
 Something is definitely brewing here.
 name: kitchen
 monsters:
