--- a/data/locations/pool.yml
+++ b/data/locations/pool.yml
@@ -1,7 +1,7 @@
-title: Its pretty wet in here. 
-description: Not the brightest idea. Even sometimes you wonder why you make the choices
+title: It's pretty wet in here. 
+description: Not the brightest idea. You find yourself wondering why you make the choices
 you do. They have sometimes gotten you into questionable situations. Meanwhile,
-in reality amphibious monsters calculate their frenzy attacks.
+around you amphibious monsters calculate their frenzy attacks.
 name: pool
 monsters:
   - merman
