--- a/data/locations/backyard.yml
+++ b/data/locations/backyard.yml
@@ -1,6 +1,6 @@
 title: The rain continues to pour heavily around you. 
-description: An strangely shaped makeshift pool sits at the center of the backyard.
-As the rainwater starts fill and overflow, it creates a muddy chocolate type liquid.
+description: A strangely shaped makeshift pool sits at the center of the back yard.
+Filled to overflowing by the rainwater, it creates a muddy chocolate type liquid.
 The pool has clearly been infested with creatures splashing about.
 name: backyard
 items: 
