--- a/data/locations/backyard_breezeway.yml
+++ b/data/locations/backyard_breezeway.yml
@@ -1,6 +1,6 @@
 title: The backyard breezeway shields you from the storm.
-description: Its mildly comforting knowing the rain cannot reach you here. The patio
-looks dry and relaxing enough. Maybe a small break is well deserved??
+description: It is mildly comforting knowing the rain cannot reach you here. The patio
+looks dry and relaxing enough. Perhaps a small break is well deserved?
 name: backyard breezeway
 monsters:
 items: 
