--- a/data/locations/breezeway.yml
+++ b/data/locations/breezeway.yml
@@ -1,7 +1,7 @@
 title: You make your way through the archway. 
 description: On each side several statues of knights tower over you. They appear to
-monitor your every move. Each individual statue has a unique weapon or piece of armor
-that makes it stand out from each other.
+watch your every move. Each individual statue has a unique weapon or piece of armor
+that makes it stand out from the others.
 name: archway
 monsters:
   - none
