--- a/data/locations/pantry.yml
+++ b/data/locations/pantry.yml
@@ -1,7 +1,7 @@
 title: The stench of different herbs & spices quickly becomes disorienting.
-description: Although difficult to tolorate, its fascinating to stare at the amount
-of unknown ingredients you have stumbled upon. A master alchamist or witch could
-certainaly make use of these. Unfourtuatnly you are neither.
+description: Although difficult to tolorate, it is fascinating to stare at the amount
+of unknown ingredients you have stumbled upon. A master alchemist or witch could
+certainaly make use of these. Unfortunately you are neither.
 name: pantry
 monsters:
   - none
