--- a/data/locations/secret_pantry.yml
+++ b/data/locations/secret_pantry.yml
@@ -1,5 +1,5 @@
 title: The colors here are unlike anything you've ever seen.
-description: It's difficult to understand just what your looking at. This area
+description: It's difficult to understand just what you're looking at. This area
 has been magically created in order to allow 'The Witch' to rest in between her
 sessisons brewing of potions or meal prep.
 name: secret pantry
