Displaying load errors for locations now, corrected some location files

--- a/data/locations/backyard_breezeway.yml
+++ b/data/locations/backyard_breezeway.yml
@@ -1,6 +1,7 @@
 title: The backyard breezeway shields you from the storm.
-description: Its mildly comforting knowing the rain cannot reach you here. The patio
-looks dry and relaxing enough. Maybe a small break is well deserved??
+description: >
+  Its mildly comforting knowing the rain cannot reach you here. The patio
+  looks dry and relaxing enough. Maybe a small break is well deserved??
 name: backyard breezeway
 monsters:
 items: 
