--- a/data/end/death.yml
+++ b/data/end/death.yml
@@ -6,6 +6,10 @@ header:
     background: "#540a00"
     font-weight: bold
     text-align: center
+description: >
+  Death comes for us all, in the end... 
+  but for you, it was especially harsh. Your body is never seen again, 
+  and your spirit is trapped here for ever. It is not in good company.
 title: 
   style:
     color: "#540a00"
