--- a/data/locations/brewing_room.yml
+++ b/data/locations/brewing_room.yml
@@ -1,5 +1,6 @@
-title: A pot in the center of the room boils with green bubily fluid. The 
-description: The floor is littered with unregonizizele ingredients.
+title: The room is stenched with a dreadful odor.
+description: A pot in the center of the room boils with green bubily fluid. The 
+floor is littered with unregonizizele ingredients.
 name: brewing room
 monsters:
  - venemous frog
