--- a/data/locations/secret_pantry.yml
+++ b/data/locations/secret_pantry.yml
@@ -1,12 +1,10 @@
 title: The colors here are unlike anything you've ever seen.
 description: >
-  It's difficult to understand just what your looking at. This area
-  has been magically created in order to allow 'The Witch' to rest in between her
-  sessisons brewing of potions or meal prep.
-name: secret pantry
+  Its difficult to understand just what your looking at. This area
+  has been magically created in order to allow the Witch to rest in between her
+  potion brweing and meal prep.
+name: secret room
 monsters:
-  - the witch
-items: 
-  - none
+ - witch
 connects:
-  - pantry
+ - brewing room
